# OpenStreetMapAPIdoc

./: 404.html  PROJECT_devScenario.md  PROJECT_plan.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
Overview/: index.html
docs/: Overview.md  index.md  overview.md  robots.txt  semantic_versioning.md  using_AI_in_documentation.md  when_NOT_to_use_the_API.md
docs/endpoints_(API_calls)/: close_changeset.md  create_node.md  create_note.md  create_relation.md  create_way.md  delete_node.md  delete_relation.md  delete_way.md  get_api_capabilities.md  get_api_map.md  get_api_permissions.md  get_api_versions.md  get_changesets.md  get_node.md  get_notes_by_bbox.md  get_relation.md  get_user_details.md  get_way.md  miscellaneous.md  open_changeset.md  update_node.md  update_relation.md  update_way.md
docs/general_information/: URL_+_authentication.md  bounding_box.md  changesets.md  elements.md  info.md  internal_errors_while_generating_a_response.md  maximum_string_lenghts.md  reliably_identifying_users.md  tags.md  version_numbers_and_optimistic_locking.md
docs/general_informations/: URL_+_authentication.md  changesets.md  elements.md  faking_the_correct_HTTP_methods.md  info.md  internal_errors_while_generating_a_response.md  maximum_string_lenghts.md  reliably_identifying_users.md  tags.md  (+1 more)
overview/: index.html
search/: search_index.json
semantic_versioning/: index.html
site/: 404.html  index.html  sitemap.xml
using_AI_in_documentation/: index.html
when_NOT_to_use_the_API/: index.html
(+64 files in other folders)
