[project]
name = "openstreetmapapidoc"
version = "0.1.0"
description = ""
authors = [
    {name = "Jędrzej Steckiewicz",email = "jjsteckiewicz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymdown-extensions (>=10.14.3,<11.0.0)"
]

[tool.poetry]
packages = [{include = "openstreetmapapidoc", from = "src"}]


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.9"
pymdown-extensions = "^10.14.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
